@@ -1,13 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- $Id$ -->
-<html>
-<head>
-<jwc id="styleSheet"/>
-	<title>Exception</title>
-</head>
 
+<jwc id="shell">
 <body>
-
 
 <span class="exception-header">
 An exception has occured.
@@ -20,6 +14,5 @@ An exception has occured.
 <p>
 
 <jwc id="showDebug"/>
-
 </body>
-</html>
+</jwc>
