@@ -1,5 +1,4 @@
 <?xml version="1.0"?>
-<!-- edited with XML Spy v3.0 NT (http://www.xmlspy.com) by Howard Ship (Primix Solutions) -->
 <!-- $Id$ -->
 <!DOCTYPE specification PUBLIC "-//Primix Solutions//Tapestry Specification 1.0//EN"  
 	"http://tapestry.sourceforge.net/dtd/Tapestry_1_0.dtd">
@@ -7,23 +6,15 @@
 	<class>com.primix.tapestry.pages.Exception</class>
 	<components>
 		<component>
-			<id>styleSheet</id>
-			<type>Any</type>
+			<id>shell</id>
+			<type>Shell</type>
 			<bindings>
 				<static-binding>
-					<name>rel</name>
-					<value>stylesheet</value>
-				</static-binding>
-				<static-binding>
-					<name>type</name>
-					<value>text/css</value>
-				</static-binding>
-				<static-binding>
-					<name>element</name>
-					<value>link</value>
+					<name>title</name>
+					<value>Exception</value>
 				</static-binding>
 				<binding>
-					<name>href</name>
+					<name>stylesheet</name>
 					<property-path>assets.stylesheet</property-path>
 				</binding>
 			</bindings>
