@@ -1,9 +1,7 @@
-<!doctype html public "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- $Id$ -->
-<html>
-<head>
-<title>Session Timeout</title>
-</head>
+
+<jwc id="shell">
+
 <body>
 Your session has timed out.
 
@@ -18,4 +16,4 @@ make room for active users.
 <jwc id="restart">restart</jwc></b> the session to continue.
 
 </body>
-</html>
+</jwc>
